<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80545454"
        android:gravity="center">

        <LinearLayout
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/bg_loading_cus"
            android:layout_marginHorizontal="60dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/dialog_pink"
                    >

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="12dp"
                        android:fontFamily="@font/josefin_sans_medium"
                        android:gravity="center"
                        android:text="@string/network_connection_error"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </FrameLayout>


            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/txtDescription"
                        style="@style/custom_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/josefin_sans_regular"
                        android:gravity="center"
                        android:text="@string/check_your_network_connection"
                        android:textColor="@color/pink"
                        android:textSize="16sp"

                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <FrameLayout
                        android:id="@+id/btnOk"
                        android:layout_width="101dp"
                        android:layout_height="36dp"
                        android:layout_marginHorizontal="88dp"
                        android:layout_marginTop="33dp"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/bg_item_yes"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtDescription">

                        <TextView
                            android:id="@+id/txtYes"
                            style="@style/custom_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/josefin_sans_regular"
                            android:text="@string/ok"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </FrameLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </FrameLayout>


        </LinearLayout>
    </LinearLayout>
</layout>
