<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_app"
    tools:context=".ui.suggestion.SuggestionActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/hehe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <!-- Back Button -->
    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="39dp"
        android:layout_height="39dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="54dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Title -->
    <TextView
        android:id="@+id/txtTitle"
        style="@style/custom_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coiny_regular"
        android:gravity="center"
        android:text="@string/suggestion"
        android:textColor="@color/pink"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <!-- quyen -->
    <FrameLayout
        android:id="@+id/native_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="parent">

        <include layout="@layout/ads_shimmer_avg"/>
    </FrameLayout>
    <!-- quyen -->

    <!-- NestedScrollView bắt đầu từ guideline -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/native_ads"
        app:layout_constraintBottom_toTopOf="@id/native_ads_2"        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <!-- Tommy Section -->
            <com.animal.avatar.charactor.maker.core.custom.StrokeTextView
                android:id="@+id/tommy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/coiny_regular"
                android:includeFontPadding="false"
                android:paddingBottom="7dp"
                android:paddingTop="3dp"
                android:text="@string/tommy"
                android:textColor="#FFA600"
                android:textSize="24sp"
                app:strokeWidth="4dp"
                app:strokeColor="@color/white" />

            <!-- Miley Section -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTommy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="20dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                android:paddingHorizontal="20dp"
                android:paddingBottom="3dp"
                tools:listitem="@layout/item_suggestion" />

            <com.animal.avatar.charactor.maker.core.custom.StrokeTextView
                android:id="@+id/miley"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/coiny_regular"
                android:includeFontPadding="false"
                android:paddingBottom="7dp"
                android:paddingTop="3dp"
                android:text="@string/miley"
                android:textColor="#FF7396"
                android:textSize="24sp"
                app:strokeWidth="4dp"

                app:strokeColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvMiley"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="20dp"
                android:paddingHorizontal="20dp"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="7dp"
                tools:listitem="@layout/item_suggestion" />

            <!-- Dammy Section -->
            <com.animal.avatar.charactor.maker.core.custom.StrokeTextView
                android:id="@+id/dammy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-5dp"
                android:fontFamily="@font/coiny_regular"
                android:includeFontPadding="false"
                android:paddingBottom="7dp"
                android:paddingTop="0dp"
                android:text="@string/dammy"
                android:textColor="#8501D2"
                android:textSize="24sp"
                app:strokeWidth="4dp"
                app:strokeColor="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvDammy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:paddingHorizontal="20dp"
                android:clipToPadding="false"
                android:clipChildren="false"
                android:paddingBottom="7dp"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_suggestion" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- quyen -->
    <FrameLayout
        android:id="@+id/native_ads_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/ads_shimmer_collap_native"/>
    </FrameLayout>
    <!-- quyen -->

</androidx.constraintlayout.widget.ConstraintLayout>