<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_app"
    tools:context=".ui.permission.PermissionActivity">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/tranf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="53dp">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/txtTitle1"
                style="@style/custom_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/btnSettings"
                android:layout_toEndOf="@+id/btnBack"
                android:fontFamily="@font/coiny_regular"
                android:gravity="center"
                android:paddingVertical="2dp"
                android:text="@string/permission"
                android:textColor="@color/pink"
                android:textSize="24sp" />


            <ImageView
                android:id="@+id/btnSettings"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:visibility="invisible" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/imgPer"
        android:layout_width="196dp"
        android:layout_height="178dp"
        android:layout_marginTop="-5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar"
        android:src="@drawable/img_permision"/>


    <ImageView
        android:id="@+id/imgTxtper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_marginTop="0dp"
        android:visibility="invisible"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgPer"
        android:src="@drawable/img_text_per"/>

    <LinearLayout
        android:id="@+id/txtPermission"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginHorizontal="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/imgTxtper"
        app:layout_constraintStart_toStartOf="@+id/imgTxtper"
        app:layout_constraintTop_toBottomOf="@id/imgPer"
       >

        <TextView
            android:id="@+id/txtPer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FF7396"
            android:fontFamily="@font/josefin_sans_medium"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPermission">

        <RelativeLayout
            android:id="@+id/layoutStorage"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/bg_lang_selected">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/josefinsans_semibold"
                android:gravity="start"
                android:text="@string/storage"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/switchPermission"
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/sw_on" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layoutNotifi"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_lang_selected">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp"
                android:fontFamily="@font/josefinsans_semibold"
                android:gravity="start"
                android:text="@string/notification"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/switchNotification"
                android:layout_width="56dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:src="@drawable/sw_off" />
        </RelativeLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/native_ads"
        app:layout_constraintStart_toStartOf="parent"
        >

        <TextView
            android:id="@+id/txtContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:fontFamily="@font/nunito_medium"
            android:padding="10dp"
            android:text="@string/continue_per"
            android:textColor="@color/pink"
            android:textSize="18sp" />
    </FrameLayout>

    <!-- quyen -->
    <FrameLayout
        android:id="@+id/native_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/ads_shimmer_big" />
    </FrameLayout>
    <!-- quyen -->

</androidx.constraintlayout.widget.ConstraintLayout>